--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-node": "mocha -r ts-node/register,test/environment-stub.ts --timeout 5000 \"test/**/*.spec.ts?(x)\"",
     "create-symbolic": "npx ts-node scripts/tools/symbolic-links-manager.ts",
     "build": "yarn create-symbolic && ./node_modules/.bin/tsc -p tsconfig.json"
   },
