dev: unit test fixed

--- a/app/backend/tsconfig.json
+++ b/app/backend/tsconfig.json
@@ -8,8 +8,8 @@
     ],
     "sourceMap": false,
     "paths": {
-      "@ss-image-saw/*": [
-        "node_modules/@ss-image-saw/*/src"
+      "@horoscopozando/*": [
+        "node_modules/@horoscopozando/*/src"
       ]
     }
   },
