--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -12,8 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1189.0",
-    "json2typescript": "^1.5.1"
+    "@aws-sdk/client-dynamodb": "3.145.0",
+    "@aws-sdk/lib-dynamodb": "3.145.0",
+    "aws-sdk": "2.1189.0",
+    "json2typescript": "1.5.1"
   },
   "devDependencies": {
     "@types/adm-zip": "0.4.34",
@@ -26,9 +28,9 @@
     "@types/pako": "1.0.1",
     "@types/pngjs": "3.4.2",
     "@types/sinon": "9.0.4",
-    "@types/uuid": "8.3.2",
+    "aws-sdk-client-mock": "1.0.0",
     "chai": "4.2.0",
-    "chai-each": "^0.0.1",
+    "chai-each": "0.0.1",
     "js-yaml": "3.14.0",
     "jscpd": "3.3.22",
     "mkdirp": "1.0.4",
@@ -79,7 +81,6 @@
     "mime-types": "2.1.34",
     "mime-db": "1.51.0",
     "pngjs": "5.0.0",
-    "tslib": "2.3.0",
-    "uuid": "3.4.0"
+    "tslib": "2.3.0"
   }
 }
